# eliza_private_equity_rag_project

./: .env.example  .gitignore  PROJECT_STRUCTURE.txt  README.md  SEC_Filing_Intelligence_PRD (1).docx  app.py  main.py  mcp_server.py  pyproject.toml  setup.sh
.claude/: settings.json
notebooks/: explore_sec_edgar_files.ipynb
reports/validate_chunks_reports/: validate_chunks_20260508_104134.md
scripts/: augment_corpus.py  build_index.py  cost_report.py  eval_rag.py  inspect_answer.py  inspect_index.py  query_cli.py  validate_chunks.py
src/embedders/: __init__.py
src/interfaces/: __init__.py
src/llm/: __init__.py
src/pipeline/: __init__.py  prompt_builder.py  rag_pipeline.py
src/preprocessing/: chunker.py  parser.py
src/retrieval/: hybrid_retriever.py  query_analyzer.py
src/vector_stores/: __init__.py  chroma_store.py  qdrant_store.py
tests/: test_preprocessing.py  test_retrieval.py
