[project]
name = "eliza-private-equity-rag-project"
version = "0.1.0"
description = "Retrieval Augmented Generation RAG pipeline for Eliza, scoped to a small sample of SEC 10-K and 10-Q filings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sec-edgar-downloader>=5.1.0",
    "openai>=1.0",
    "chromadb>=0.5",
    "qdrant-client>=1.9",
    "litellm>=1.40",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7",
    "sentence-transformers>=3.0",
    "streamlit>=1.35",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "mcp>=1.0",
]
